# Process-Engine

./: .gitignore  CMakeLists.txt  README.md  main.cpp
_header/: GameConfig.h  MainConfig.h  d3dInclude.h  mmeInclude.h  targetver.h  windowsInclude.h
_header/File/: FileUtil.h
_header/Game/: Components.h  Game.h  GameLoop.h  SceneRenderer.h  SceneUpdater.h  Scenes.h  SystemChainIDs.h  Topics.h  WindowModes.h
_header/Graphics/: BitmapLoader.h  ISpriteDrawer.h  ITextDrawer.h  Sprite.h  SpriteDrawInstruction.h  SpriteLoader.h  TextureLoader.h
_header/Resource/: FileLoadable.h  ManifestLoadable.h  ParentResourceStorage.h  Resource.h  ResourceLoader.h  ResourceOriginVariant.h  ResourceStorage.h
_header/Util/: StringUtil.h
_header/Window/: BaseWindow.h  GraphicsWrapper.h  MainWindow.h  WindowMode.h  WindowPainter.h
_shaders/: CMakeLists.txt  PixelShader.hlsl  VertexShader.hlsl
_source/: CMakeLists.txt  Main.cpp  main.cpp
_source/File/: FileUtil.cpp
_source/Game/: Game.cpp  GameLoop.cpp  SceneRenderer.cpp  SceneUpdater.cpp  Scenes.cpp  Topics.cpp  WindowModes.h
_source/Graphics/: BitmapLoader.cpp  SpriteLoader.cpp  TextureLoader.cpp
_source/Resource/: ParentResourceStorage.cpp  ResourceLoader.cpp
_source/Util/: StringUtil.cpp
_source/Window/: GraphicsWrapper.cpp  MainWindow.cpp  WindowPainter.cpp
darkness/: grammar.txt
darkness/_header/: Ast.h  Interpreter.h  Lexer.h  Parser.h  TestMain.h  Token.h
darkness/_source/: Lexer.cpp  Parser.cpp
scripts/: bombB.dk  clearBullets.dk  func arc(velocity, symmetry, increment, nextFunc).dk  func column(velocity, count, increment, nextFunc).dk  func diff(easyValue, normalValue, hardValue, lunaticValue).dk  func ring(velocity, symmetry, nextFunc).dk  func shiftAnglePeriod(targetAngle, ticks).dk  func shiftSpeedIncrement(targetSpeed, increment).dk  ghostSpawner.dk  projectileExplode.dk  removeExplode.dk  shotAPreview.dk  shotBPreview.dk  stage1.dk  test.dk
scripts/credits/: credits.dk  credits8.dk  creditsN.dk
scripts/enemy/: 1_10_bullet.dk  1_10_bulletExplode.dk  1_10_enemy.dk  1_10_spawner.dk  1_11_bullet2.dk  1_11_bullet2Explode.dk  1_11_enemy.dk  1_11_revenge.dk  1_11_shot.dk  1_12_enemy.dk  1_12_shot.dk  1_12_spawner.dk  1_1_bullet.dk  1_1_shot.dk  1_2_bulletExplode.dk  1_2_enemy.dk  1_2_shot.dk  1_3_enemy.dk  1_3_revenge.dk  1_3_shot.dk  1_3_spawner.dk  1_6_enemyLeft.dk  1_6_shot.dk  1_6_spawner.dk  1_9_spawner.dk  2_1_enemy.dk  b1_1_attack.dk  b1_1_shot1.dk  b1_1_shot1_bullet1.dk  b1_1_shot1_bullet1Explode.dk  b1_1_shot1_bullet2.dk  b1_1_shot1_bullet2Explode.dk  b1_1_shot2.dk  b1_1_shot2_bullet1.dk  b1_1_shot2_bullet1Explode.dk  b1_1_shot2_bullet2.dk  b1_1_shot2_bullet2Explode.dk  b1_1_shot3_bullet2.dk  b1_2_attack.dk  b1_2_shot1.dk  (+28 more)
scripts/funcs/: func bounce(numBounces).dk  func bounceSides(numBounces).dk  func boundGotoDecelerating(xLow, xHigh, yLow, yHigh, rLow, rHigh, maxSpeed).dk  func embed().dk  func getLeftSpawn(y).dk  func getRightSpawn(y).dk  func getTopSpawnLeft(x).dk  func getTopSpawnRight(x).dk  func gotoDecelerating(targetPos, maxSpeed).dk  func gotoDecelerating(targetX, targetY, maxSpeed).dk  func gravity(direction, acceleration, dragCoefficient).dk  func initPickupSpeed().dk  func mirror(position, velocity, axis, nextFunc).dk  func playerPowerSplit(func0, func1, func2, func3, func4, func5, func6).dk  func polygon(vertexVelocity, sides, bulletsPerSide, nextFunc).dk  func randomAngle().dk  func randomColorfulColor().dk  func shiftAngleIncrement(targetAngle, increment).dk  func shiftAngleLongPeriod(targetAngle, ticks).dk  func shiftSpeedPeriod(targetSpeed, ticks).dk  func shiftVelocityLongTurnPeriod(targetSpeed, targetAngle, ticks).dk  func shiftVelocityPeriod(targetSpeed, targetAngle, ticks).dk  func shiftVelocityTurnPeriod(targetSpeed, targetAngle, ticks).dk  func toDegrees(radians).dk  func toRadians(degrees).dk
(+628 files in other folders)
